transpiler/internal/tests/types/soundness/p08_unknown_type_name.mochi
// MEP-4 P8: a reference to an undeclared type name is reported as T025.
let x: Nope = 1
